--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "lib": [
-      "DOM",
-      "ES2022"
-    ],
+    "lib": ["DOM", "ES2022"],
     "rootDir": "src",
     "module": "ES2022",
     "moduleResolution": "node",
@@ -19,6 +16,8 @@
   "include": [
     "eslint.config.js",
     "homebridge-ui",
-    "src"
+    "src",
+    "typing.d.ts",
+    "src/settings.ts"
   ]
 }
