--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "nodemon": "3.1.4",
     "rimraf": "6.0.1",
     "ts-node": "10.9.2",
-    "typescript": "5.5.4"
+    "typescript": "5.5.4",
+    "typescript-eslint": "^8.18.2"
   }
 }
